movimientos y funcion de calibracion

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,12 @@ default_envs =
 framework = arduino
 platform = atmelavr
 board = megaatmega2560
-upload_port   = /dev/tty.usbmodem14401
-monitor_port  = /dev/tty.usbmodem14401
+upload_port   = /dev/tty.usbmodem14201
+monitor_port  = /dev/tty.usbmodem14201
 monitor_speed = 115200
 build_flags = 
     -D GS_CONTROLLER
+    -D MONITOR_SPEED=115200
 
 lib_deps = 
     Arduino
