movimientos manuales y pinout

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@ default_envs =
 framework = arduino
 platform = atmelavr
 board = megaatmega2560
-upload_port   = /dev/tty.usbmodem14201
-monitor_port  = /dev/tty.usbmodem14201
+upload_port   = COM9
+monitor_port  = COM9
 monitor_speed = 115200
 build_flags = 
     -D GS_CONTROLLER
