--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/dev/Projects/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
+            "executable": "g:/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
             "projectEnvName": "gs_controller",
-            "toolchainBinDir": "/Users/dev/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/andre/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/dev/Projects/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
+            "executable": "g:/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
             "projectEnvName": "gs_controller",
-            "toolchainBinDir": "/Users/dev/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/andre/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/dev/Projects/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
+            "executable": "g:/SpaceLab/GsController/.pio/build/gs_controller/firmware.elf",
             "projectEnvName": "gs_controller",
-            "toolchainBinDir": "/Users/dev/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/andre/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
